Removed Observer code and replaced with Property code.  Also converted some List declarations to typesafe ArrayList declarations;